tests/miniJava/neg/000070_mutation.MiniJava
class java { length static void Main ( String [ ] java ) { { } } }
